Changelog
=========
[David Ichim - david.ichim@eaudeweb.ro]

0.3-dev - (unreleased)
----------------------
 * Bug fix: Removed deprecated ToolInit param product_name [voineali #4139]
 * Bug fix: Fixed DeprecationWarning: CMFCorePermissions [voineali #4139]
 * Bug fix: Fixed DeprecationWarning: PloneUtilities [voineali #4139]
 * Bug fix: Fixed DeprecationWarning: CustomizationPolicies [voineali #4139]

0.2 - (2011-02-23)
------------------
 * Bug fix: fixes install method [ichimdav #2931]

0.1 - (2011-02-22)
------------------
 * Feature: eggified product to Products.NavigationManager [ichimdav #2931]
 * Change: fixed a lot of the errors and warnings that pylint gave [ichimdav #4140]
 * Initial release
