@@ -2,8 +2,8 @@
 
 from Products.NavigationManager.tests.NavigationManagerTestCase import NavigationManagerTestCase
 from zope.app.component.hooks import setSite
-from zope.app.event.objectevent import ObjectModifiedEvent
-from zope.event import notify
+#from zope.app.event.objectevent import ObjectModifiedEvent
+#from zope.event import notify
 from Products.NavigationManager.browser import menu
 
 class TestMenu(NavigationManagerTestCase):
